RC1 ARM64, SPARQL, clean up

--- a/arm64/Dockerfile
+++ b/arm64/Dockerfile
@@ -3,7 +3,7 @@
 # vim: set fileencoding=utf-8:
 
 
-FROM            --platform=linux/amd64 jupyter/datascience-notebook:latest
+FROM            --platform=linux/arm64 jupyter/datascience-notebook:latest
 MAINTAINER      lucyfer AT cime.net
 
 
