--- a/arm64/Dockerfile
+++ b/arm64/Dockerfile
@@ -1,11 +1,9 @@
-# (c) Copyright 2022 pr3d4t0r
+# (c) Copyright 2022 Lucyfer Contributors
 
 # vim: set fileencoding=utf-8:
 
 
-# TODO:  See https://github.com/pr3d4t0r/lucyfer/issues/26
-#        Use buildx once we have a common base image for all
-#        architectures.
+# TODO:  Implement buildx in a safe manner
 FROM            --platform=linux/arm64 jupyter/scipy-notebook:latest
 MAINTAINER      lucyfer AT cime.net
 
