--- a/arm64/Dockerfile
+++ b/arm64/Dockerfile
@@ -13,6 +13,8 @@ USER            root
 RUN             apt-get update && \
                 apt-get -y upgrade && \
                 apt-get -y install \
+                    awscli \
+                    curl \
                     git \
                     graphviz \
                     htop \
@@ -22,6 +24,10 @@ RUN             apt-get update && \
                     tree \
                     vim
 
+# Integration tools
+RUN             CURRENT_VERSION=$(curl -Ls https://api.github.com/repos/Versent/saml2aws/releases/latest | jq '.tag_name[1:]' | awk '{ gsub("\"", ""); print; }') && \
+                wget -c https://github.com/Versent/saml2aws/releases/download/v${CURRENT_VERSION}/saml2aws_${CURRENT_VERSION}_linux_arm64.tar.gz -O - | tar -xzv -C /usr/local/bin && \
+                chmod u+x /usr/local/bin/saml2aws
 
 # Kotlin installation
 RUN             apt-get -y install default-jdk
@@ -32,6 +38,7 @@ COPY            resources/_bash_profile /root/.bash_profile
 COPY            resources/_gitignore /etc/skel/.gitignore
 COPY            resources/_vimrc /etc/skel/.vimrc
 
+# ---------------------------------------- 
 
 USER            jovyan
 
@@ -41,13 +48,11 @@ RUN             pip install -U --requirement /tmp/requirements.txt && \
                     fix-permissions "${CONDA_DIR}" && \
                     fix-permissions "/home/${NB_USER}"
 
-
 # SPARQL kernel support
 
 RUN             pip install sparqlkernel
 USER            root
 RUN             jupyter sparqlkernel install
-
 
 # Kotlin kernel support
 RUN             pip install kotlin-jupyter-kernel
