--- a/arm64/Dockerfile
+++ b/arm64/Dockerfile
@@ -14,6 +14,8 @@ RUN             apt-get update && \
                 apt-get -y upgrade && \
                 apt-get -y install \
                     awscli \
+                    bat \
+                    bsdmainutils \
                     curl \
                     git \
                     graphviz \
