--- a/arm64/kallisto/Makefile
+++ b/arm64/kallisto/Makefile
@@ -8,5 +8,5 @@ DOCKER_IMAGE_VERSION_FILE=dockerimageversion.txt
 DOCKER_IMAGE=$(shell cat $(DOCKER_IMAGE_NAME_FILE))
 DOCKER_VERSION=$(shell cat $(DOCKER_IMAGE_VERSION_FILE))
 
-include ../build.mk
+include ../../build.mk
 
