--- a/lucyfer-compose.yaml
+++ b/lucyfer-compose.yaml
@@ -5,6 +5,18 @@
 
 version: '3'
 
+# IMPORTANT:
+# By convention, Lucyfer service names must always be a pastiche of the
+# container name, underscore, and the word service:
+#
+# Container   Service
+# ---------   -------
+# lucyfer     lucyfer_service
+# kallisto    kaliisto_service
+#
+# lucy resolves the service name based on the container/component that the user
+# wishes to run when the $container command line argument is used.
+
 services:
     lucyfer_service:
         container_name: 'lucyfer'
