--- a/arm64/Dockerfile
+++ b/arm64/Dockerfile
@@ -4,7 +4,7 @@
 
 
 # TODO:  Implement buildx in a safe manner
-FROM            --platform=linux/arm64 jupyter/scipy-notebook:latest
+FROM            --platform=linux/arm64 jupyter/scipy-notebook:aarch64-latest
 MAINTAINER      lucyfer AT cime.net
 
 
@@ -42,7 +42,7 @@ COPY            resources/_vimrc /etc/skel/.vimrc
 
 RUN             ln -s /usr/bin/batcat /usr/local/bin/bat
 
-# ---------------------------------------- 
+# ----------------------------------------
 
 USER            jovyan
 
