Implemented and tested - we have R and Lua access again

--- a/arm64/Dockerfile
+++ b/arm64/Dockerfile
@@ -2,7 +2,7 @@
 
 
 # TODO:  Implement buildx in a safe manner
-FROM            --platform=linux/arm64 jupyter/scipy-notebook:aarch64-latest
+FROM            --platform=linux/arm64 jupyter/datascience-notebook:aarch64-latest
 MAINTAINER      lucyfer AT cime.net
 
 
