buildx - cross-platform images ready!
* buildx added to the Makefile targets
* Bumped version to 3.2.0 - enough changes to make them stick
* Updated `lucy` to support the new workflow - no need for explicit `uname` system type detection

Resolves #92.

--- a/kallisto/Dockerfile
+++ b/kallisto/Dockerfile
@@ -1,6 +1,4 @@
-# TODO:  Implement buildx in a safe manner
-# docker buildx use lucyfer-builder
-FROM            --platform=linux/amd64 ubuntu:jammy
+FROM            ubuntu:jammy
 MAINTAINER      lucyfer AT cime.net
 
 
