Tactical build completed, ready to refresh with latest versions.

--- a/arm64/Dockerfile
+++ b/arm64/Dockerfile
@@ -6,14 +6,17 @@ MAINTAINER      lucyfer AT cime.net
 
 USER            root
 
-RUN             apt-get update && \
+RUN             DEBIAN_FRONTEND=noninteractive && \
+                apt-get update && \
                 apt-get -y upgrade && \
                 apt-get -y install \
                     awscli \
                     bat \
                     bsdmainutils \
+                    ca-certificates \
                     curl \
                     git \
+                    gnupg \
                     graphviz \
                     htop \
                     jq \
@@ -27,14 +30,21 @@ RUN             CURRENT_VERSION=$(curl -Ls https://api.github.com/repos/Versent/
                 wget -c https://github.com/Versent/saml2aws/releases/download/v${CURRENT_VERSION}/saml2aws_${CURRENT_VERSION}_linux_amd64.tar.gz -O - | tar -xzv -C /usr/local/bin && \
                 chmod u+x /usr/local/bin/saml2aws
 
-# Kotlin installation
-RUN             apt-get -y install default-jdk
+# Kotlin installation and Azul's JVM:
+ARG             JAVA_VERSION=17
+RUN             curl -s https://repos.azul.com/azul-repo.key | gpg --dearmor -o /usr/share/keyrings/azul.gpg && \
+                echo "deb [signed-by=/usr/share/keyrings/azul.gpg] https://repos.azul.com/zulu/deb stable main" | tee /etc/apt/sources.list.d/zulu.list && \
+                apt-get update && \
+                apt-get -y install zulu${JAVA_VERSION}-jdk && \
+                rm -rf /var/lib/apt/lists/*
 
 
 COPY            resources/_bash_profile /etc/skel/.bash_profile
 COPY            resources/_bash_profile /root/.bash_profile
 COPY            resources/_gitignore /etc/skel/.gitignore
 COPY            resources/_vimrc /etc/skel/.vimrc
+COPY            resources/commands.jupyterlab-settings /etc/skel/.jupyter/lab/user-settings/@jupyterlab/codemirror-extension/commands.jupyterlab-settings
+COPY            resources/themes.jupyterlab-settings   /etc/skel/.jupyter/lab/user-settings/@jupyterlab/apputils-extensions/themes.jupyterlab-settings
 
 RUN             ln -s /usr/bin/batcat /usr/local/bin/bat
 
