--- a/lucyfer-compose.yaml
+++ b/lucyfer-compose.yaml
@@ -20,7 +20,15 @@ version: '3'
 services:
     lucyfer_service:
         container_name: 'lucyfer'
-        cpus: 4
+#         cpus: 4
+        deploy:
+            resources:
+                limits:
+                    cpus: '4'
+                    memory: '4G'
+                reservations:
+                    cpus: '4'
+                    memory: '4G'
 #         depends_on:
 #             - kallisto_service
         environment:
