--- a/arm64/Dockerfile
+++ b/arm64/Dockerfile
@@ -1,4 +1,5 @@
-# TODO:  Implement buildx in a safe manner
+# License:  https://raw.githubusercontent.com/pr3d4t0r/lucyfer/master/LICENSE.txt
+
 FROM            --platform=linux/arm64 jupyter/scipy-notebook:latest
 MAINTAINER      lucyfer AT cime.net
 
