--- a/kallisto/Dockerfile
+++ b/kallisto/Dockerfile
@@ -1,3 +1,5 @@
+# License:  https://raw.githubusercontent.com/pr3d4t0r/lucyfer/master/LICENSE.txt
+
 FROM            --platform=linux/amd64 ubuntu:jammy
 MAINTAINER      lucyfer AT cime.net
 
