--- a/arm64/resources/requirements.txt
+++ b/arm64/resources/requirements.txt
@@ -1,8 +1,9 @@
 devpi-client
 ipywidgets
+jupyter_bokeh
 jupyter_contrib_nbextensions
 jupyter_nbextensions_configurator
 openpyxl
-pudb==2020.1
+pudb
 pyflakes
-pytest 
+pytest
